--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,7 +6,7 @@
 
 h1 {
   color: #EA3414;
-  font-size: 90px;
+  font-size: 85px;
   font-weight: 400;
   line-height: 1;
   margin-bottom: 20px;
@@ -16,7 +16,7 @@ h2 {
   color: #EA3414;
   font-weight: 400;
   line-height: 1;
-  font-size: 80px;
+  font-size: 75px;
   margin-top: 70px;
   margin-bottom: 0;
 }
@@ -39,8 +39,9 @@ a {
 
 .phone {
   margin-top: 30px;
-  color: #12C5F1;
+  color: #EA3414;
   position: relative;
+  -webkit-text-stroke: 1px #FF8300;
 }
 
 h3 {
@@ -51,5 +52,5 @@ h3 {
   background-color: transparent;
   line-height: 1;
   font-size: 30px;
-  font-weight: 800;
+  font-weight: 600;
 }
